// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Component description should match snapshot 1`] = `
<div>
  <dl
    class="css-2mry40-DescriptionList"
  >
    <dt
      class="css-1fgqwsw"
    >
      Critical Role Cast Members
    </dt>
    <dd
      class="css-131zfi8"
    >
      Travis Willingham
    </dd>
    <dd
      class="css-131zfi8"
    >
      Laura Bailey
    </dd>
    <dd
      class="css-131zfi8"
    >
      Ashleigh Johnson
    </dd>
    <dd
      class="css-131zfi8"
    >
      Sam Riegal
    </dd>
    <dd
      class="css-131zfi8"
    >
      Matthew Mercer
    </dd>
    <dd
      class="css-131zfi8"
    >
      Marisha Ray
    </dd>
    <dd
      class="css-131zfi8"
    >
      Liam O'Brian
    </dd>
    <dd
      class="css-131zfi8"
    >
      Talisen Jaffe
    </dd>
  </dl>
</div>
`;

exports[`List Component ordered should match snapshot 1`] = `
<div>
  <ol
    class="css-1mhgfof-OrderedList"
  >
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        1.
      </div>
      <div
        class="css-6wajs7"
      >
        Travis Willingham
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        2.
      </div>
      <div
        class="css-6wajs7"
      >
        Laura Bailey
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        3.
      </div>
      <div
        class="css-6wajs7"
      >
        Ashleigh Johnson
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        4.
      </div>
      <div
        class="css-6wajs7"
      >
        Sam Riegal
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        5.
      </div>
      <div
        class="css-6wajs7"
      >
        Matthew Mercer
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        6.
      </div>
      <div
        class="css-6wajs7"
      >
        Marisha Ray
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        7.
      </div>
      <div
        class="css-6wajs7"
      >
        Liam O'Brian
      </div>
    </li>
    <li
      class="css-131zfi8"
    >
      <div
        class="css-1wa42mg"
      >
        8.
      </div>
      <div
        class="css-6wajs7"
      >
        Talisen Jaffe
      </div>
    </li>
  </ol>
</div>
`;

exports[`List Component unordered should match snapshot 1`] = `
<div>
  <ul
    class="css-pg1eyq-UnorderedList"
  >
    <li
      class="css-131zfi8"
    >
      Travis Willingham
    </li>
    <li
      class="css-131zfi8"
    >
      Laura Bailey
    </li>
    <li
      class="css-131zfi8"
    >
      Ashleigh Johnson
    </li>
    <li
      class="css-131zfi8"
    >
      Sam Riegal
    </li>
    <li
      class="css-131zfi8"
    >
      Matthew Mercer
    </li>
    <li
      class="css-131zfi8"
    >
      Marisha Ray
    </li>
    <li
      class="css-131zfi8"
    >
      Liam O'Brian
    </li>
    <li
      class="css-131zfi8"
    >
      Talisen Jaffe
    </li>
  </ul>
</div>
`;
